{
    "name": "PathbuilderKeybinds",
    "maps": [
        {
            "name": "Pathbuilder",
            "id": "cd62ed56-df6b-4ac8-b3ba-7ba9f73fc720",
            "actions": [
                {
                    "name": "SelectTarget",
                    "type": "Button",
                    "id": "c5089688-2c93-454f-963d-a8392d6a6786",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "fd8b12fb-3334-4527-b63f-46dc093ac20b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "AppendSegment",
                    "type": "Button",
                    "id": "36f9f8f2-c411-4341-b23f-b7d922e66e21",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DeleteSegment",
                    "type": "Button",
                    "id": "324e1fc7-e17c-4f85-8e5c-9fbce19ed4a6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SnapToGrid",
                    "type": "Button",
                    "id": "ec667bbe-a6ec-427b-9ec5-f27f3ab59278",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeToNextSegment",
                    "type": "Button",
                    "id": "e6309fad-307d-4e60-b6d9-567f644990ea",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeToPreviousSegment",
                    "type": "Button",
                    "id": "448b1291-3d6e-4736-8270-96b43f305e2c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "IncreaseLength",
                    "type": "Button",
                    "id": "9865982d-4833-46c3-884f-937bbb15981e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DecreaseLength",
                    "type": "Button",
                    "id": "e64d905a-0bc6-4719-998e-04d588820f0a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "IncreaseInterval",
                    "type": "Button",
                    "id": "c849da78-07fc-438c-ba00-c8907b831438",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DecreaseInterval",
                    "type": "Button",
                    "id": "3a52b446-39ff-431b-972d-116b4d00336d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeScope",
                    "type": "Button",
                    "id": "c1e24740-a3f4-410d-88e5-0481b94ad600",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AlternateHands",
                    "type": "Button",
                    "id": "afe07294-37b4-4884-bc63-d45b49bc012d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeTargetHand",
                    "type": "Button",
                    "id": "f14bf3bc-76db-4a48-ad5a-9649ad6e9349",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "54fa8ae1-6f2b-48d3-a586-a044bc83605c",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectTarget",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c0c13960-7509-45c4-898a-8619a52233f2",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Button With One Modifier",
                    "id": "d9ea3eb1-6dd4-490f-a45a-abf6152ae2db",
                    "path": "ButtonWithOneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AppendSegment",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "7bb8cd81-cc1e-40c9-852b-d39a37bd802e",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AppendSegment",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "button",
                    "id": "cbe53d93-64ba-4078-ba2c-47cab48d464a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AppendSegment",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "d6bfe8b7-afb7-4919-82a9-c12428ac1331",
                    "path": "<Keyboard>/delete",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DeleteSegment",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ecd55dce-780f-43e1-90fb-1edeaa945ce5",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SnapToGrid",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "44b80dd0-08d2-4336-a7b0-0749feeda181",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IncreaseInterval",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ca4c6a30-9c77-4bf2-87db-d169d1e09b7b",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DecreaseInterval",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8a904445-39b8-4544-b479-56743b39ea51",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeScope",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8198a01f-1bb9-4919-8eb6-227f3734530c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AlternateHands",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "41724a31-51a2-4a7c-bd8c-999ce092ba7a",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeTargetHand",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "07ec969e-5f7c-4613-ba1e-1632f05e6ab5",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeToPreviousSegment",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "92cee129-92c2-4522-ba5e-3f60bb14c6b3",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeToNextSegment",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6f0c84b7-0af5-4b17-a441-60f1ceb25865",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DecreaseLength",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "acbe1ae6-5b58-4daf-aa10-02539dcabe6d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IncreaseLength",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}